--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "jquery": "^3.6.1"
   },
   "devDependencies": {
-    "jest": "^29.1.2"
+    "jest": "^29.2.0"
+  },  "scripts": {
+      "test": "jest"
+    }
   }
-}
+
